fix: aligning logo vertically

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -91,7 +91,8 @@ nav * {
 }
 
 nav #logo {
-    width: 10em;
+    width: 9em;
+    display: block;
 }
 
 nav>a:first-of-type span {
